Grammar
stmt  : assn ';'
assn  : id '=' expr
expr  : term addop expr
      | term
term  : fact mulop term
      | fact
fact  : id
      | unary fact
      | num
      | '(' expr ')'
unary : '-'
addop : '+'
      | '-'
mulop : '*'
      | '/'
